syntax = "proto3";

package deposit.pb;

message GroupOfflineMessage {
    string from_peer_id = 1;
    string to_group_id = 2;
    string msg_id = 3;
    bytes  payload = 4;
}